example-3/K8S/Broker/Kafka-UI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui-deployment
spec:
  selector:
    matchLabels:
      app: kafka-ui-deployment
  template:
    metadata:
      labels:
        app: kafka-ui-deployment
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
