example-3/K8S/Broker/Kafka-UI/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
spec:
  selector:
    app: kafka-ui-deployment
  ports:
  - port: 8080
    targetPort: 8080
    name: http
