example-3/K8S/Broker/Kafka-UI/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  labels:
    name: kafka-ui-ingress
spec:
  rules:
  - host: kafka-ui.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-ui-service
            port: 
              number: 8080
